--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
   color: var(--color-primary-dark);
 
   /* beauty landing 2/H5 */
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -49,11 +49,10 @@ header {
       rgba(255, 255, 255, 0.19) 58.65%,
       rgba(255, 255, 255, 0) 72.78%
     ),
-    url(images/background_header.jpeg);
+    url(images/background_header.png);
   background-size: cover;
   height: 900px;
   width: auto;
-  background-attachment: fixed;
 }
 .navigation {
   list-style: none;
@@ -183,12 +182,10 @@ iframe {
 h1,
 h2 {
   font-family: 'Lato', sans-serif;
-  font-family: 'Poppins', sans-serif;
 }
 p,
 li {
   font-family: 'Lato', sans-serif;
-  font-family: 'Poppins', sans-serif;
 }
 span {
   color: var(--color-primary-blue);
@@ -224,8 +221,9 @@ span {
 .container_about {
   display: flex;
   flex-direction: row;
-  margin-top: 20px;
+  margin: 20px 40px;
 }
+
 #about {
   display: flex;
   flex-direction: column;
@@ -235,6 +233,9 @@ span {
   flex-direction: column;
   align-items: center;
   flex-grow: 1;
+}
+.about_paragraphs:last-child{
+  margin-bottom: 0px;
 }
 .reborn {
   color: var(--beauty-landing-2-c-1, #011c44);
@@ -257,20 +258,26 @@ span {
   line-height: 38px;
   width: 710px;
 }
+.container_about p:last-child{
+  margin-bottom: 0px;
+}
 .images_about {
   position: relative;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding-right: 92px;
+  gap: 20px;
 }
 .images_about .after_1 {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-evenly;
 }
 .images_about .before_1 {
   display: flex;
   justify-content: center;
+}
+.after_img_container{
+  position: relative;
 }
 .images_about img {
   border-radius: 50%;
@@ -291,22 +298,26 @@ span {
   }
 }
 .star-3 {
-  position: absolute;
   top: 30px;
   right: 80px;
   animation: stars-animation 5s infinite linear;
 }
 .star-2 {
-  position: absolute;
-  bottom: 240px;
-  left: 320px;
+  /* bottom: 240px;
+  left: 320px; */
   animation: stars-animation 4s infinite linear;
 }
 .star-1 {
-  position: absolute;
-  top: 240px;
-  right: 155px;
+  
   animation: stars-animation 3s infinite linear;
+}
+.before_2{
+  display: flex;
+  flex-grow: 1;
+  justify-content: space-evenly;
+}
+.before_2 .star-1{
+  align-self: flex-end;
 }
 body {
 }
@@ -314,6 +325,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 50px;
 }
 
 .why_container {
@@ -343,39 +355,33 @@ body {
 .why_article {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 12px;
-  border-radius: 32px;
-  background: #fff;
-
-  width: 380px;
-  padding: 24px 32px 24px 32px;
-  /* beauty landing 2/Ef1 */
-  box-shadow: 0px 4px 4px 0px rgba(168, 198, 245, 0.38);
-
-  color: #000;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
+  /* height: 180px; */
+  /* width: 316px; */
+  padding: 24px 32px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 32px;
+  background: #FFF;
+  box-shadow: 0px 4px 4px 0px rgba(168, 198, 245, 0.38);
   font-size: 18px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px; /* 133.333% */
+  line-height: 24px;
 
-  line-height: 24px; /* 133.333% */
 }
 .why_article p {
-  width: 252px;
+  width: 260px;
+  margin-top: 8px;
+  margin-bottom: 0px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
 }
 .why_paragraps {
   display: flex;
   gap: 56px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  
 }
 
-svg {
-  position: absolute;
-}
+
 #procedures {
   padding-top: 100px;
   display: flex;
@@ -670,6 +676,7 @@ footer {
   flex-direction: column;
   list-style-type: none;
   gap: 16px;
+  margin: 0px 0px;
 }
 .footer_list {
   color: #fff;
@@ -698,9 +705,11 @@ footer {
   color: #fff;
   display: flex;
   flex-basis: 175px;
-  gap: 50px;
+  gap: 25px;
   justify-content: start;
-  margin-left: 40px;
+}
+.footer_address_list{
+  width: 215px;
 }
 .address-icon_footer {
   color: #fff;
@@ -738,6 +747,7 @@ footer {
   background-color: var(--color-primary-dark);
   border-radius: 48px;
   overflow: auto;
+
 }
 .modal_btn_close {
   position: absolute;
@@ -749,6 +759,7 @@ footer {
   width: 40px;
   background-color: transparent;
   border: none;
+  pointer-events: auto;
 }
 
 .text-modal {
