--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header {
       rgba(255, 255, 255, 0.19) 58.65%,
       rgba(255, 255, 255, 0) 72.78%
     ),
-    url(images/background_header.png);
+    url(background_header.png);
   background-size: cover;
   height: 900px;
   width: auto;
